fixed problem with footer overlapping and with home button not aligned

--- a/style/main.scss
+++ b/style/main.scss
@@ -107,17 +107,19 @@ $block: '.hex-grid';
 		&__last_move {
 			background-color: #fffd73;
 		}
-		&__is_dest::after {
-			position: absolute;
-			content: "";
-			width: 15%;
-			height: 17%;
-			background-color: #111111;
-			opacity: 0.5;
-			border-radius: 50%;
-			display: inline-block;
-			cursor: pointer;
-		}
+    &__is_dest {
+      cursor: pointer;
+      &::after {
+        position: absolute;
+        content: "";
+        width: 15%;
+        height: 17%;
+        background-color: #111111;
+        opacity: 0.5;
+        border-radius: 50%;
+        display: inline-block;
+      }
+    }
 		&__is_piece_and_dest::after {
 			position: absolute;
 			content: "";
@@ -158,6 +160,7 @@ $block: '.hex-grid';
 
 main {
 	margin-top: calc(var(--header-height) * 1.3);
+  margin-bottom: calc(var(--footer-height) * 1.3 * 5);
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -190,7 +193,7 @@ footer {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 3rem;
+  height: var(--footer-height);
 }
 
 .locales {
@@ -246,6 +249,8 @@ nav {
   
   --header-height: 100px;
   --header-scrolling-height: 70px;
+
+  --footer-height: 50px;
 
 
   /* media sizes */
@@ -474,10 +479,6 @@ ol, li {
 	max-width: 500px;
 	justify-content: space-between;
 	align-items: center;
-}
-
-.title {
-	margin-bottom: 20px;
 }
 
 .custom_game_link {
